@@ -1,5 +1,10 @@
 2008-02-26  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Gettext.Editor/POEditorWidget.cs: Untranslated <--> translated
+	  update now works in entry list.
+
+2008-02-26  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Gettext/CatalogParser.cs: Fixed plural message bug.
 
 2008-02-26  Mike Krüger <mkrueger@novell.com> 
